# ICP_CPP

./: CMakeLists.txt  README.md
ICP_OPT/: README.md
ICP_OPT/data/: data_for_ICP.csv
ICP_OPT/include/: transformation_utilities.hpp
ICP_OPT/src/: main_file.cpp
ICP_OPT/src/old/: kuka_pts_get.cpp  test1.cpp  test2.cpp  try1.cpp
ICP_SVD/: CMakeLists.txt
ICP_SVD/data/: BladeScan1.csv  DomeScan1.csv  FenderScan1.csv  Fender_ptcloud.csv  MoldScan1.csv  part_ptsBlade1.csv  part_ptsDome1.csv  part_ptsFender1.csv  part_ptsMold1.csv  scan_ptsBlade1.csv  scan_ptsDome1.csv  scan_ptsFender1.csv  scan_ptsMold1.csv
ICP_SVD/include/: utilities.hpp
ICP_SVD/src/: main_file.cpp  transformation_utilities.cpp  utilities.cpp
ICP_SVD/src/extra/: knn_ex.cpp
data/: part_ptcloud.csv
include/: file_rw.hpp  opt_obj.hpp  transformation_utilities.hpp  utilities.hpp
src/: file_rw.cpp  opt_obj.cpp  test_file.cpp  transformation_utilities.cpp  utilities.cpp
src/old/: file_read.cpp  knn_ex.cpp  nlopt_ex.cpp  svd_function.cpp
